finish to import file: one line with multi stocks